Refactor CATH protocol output messages and update download statistics
- Changed output message for existing CATH domain list file.
- Removed redundant download messages and adjusted statistics for successful downloads.
- Updated analysis output to reflect the correct number of structures analyzed.
- Modified output format for progress updates during downloads and analysis.
- Cleaned up unnecessary stderr outputs related to tqdm warnings.

--- a/cath-protocol.ipynb
+++ b/cath-protocol.ipynb
@@ -75,16 +75,8 @@
       "Diretorio base: /Volumes/promethion/cath-mainly-alpha\n",
       "\n",
       "Baixando lista de dominios CATH...\n",
-      "Arquivo CATH salvo: /Volumes/promethion/cath-mainly-alpha/cath-domain-list.txt\n",
+      "Arquivo CATH ja existe: /Volumes/promethion/cath-mainly-alpha/cath-domain-list.txt\n",
       "Processando arquivo CATH...\n",
-      "Arquivo CATH salvo: /Volumes/promethion/cath-mainly-alpha/cath-domain-list.txt\n",
-      "Processando arquivo CATH...\n",
-      "Total de estruturas PDB mainly-alpha: 50996\n",
-      "\n",
-      "Iniciando download de 50996 estruturas...\n",
-      "Workers paralelos: 16\n",
-      "Salvando em: /Volumes/promethion/cath-mainly-alpha/structures\n",
-      "\n",
       "Total de estruturas PDB mainly-alpha: 50996\n",
       "\n",
       "Iniciando download de 50996 estruturas...\n",
@@ -94,14 +86,18 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/promethion/cath-mainly-alpha/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading PDB structures: 100%|██████████| 50996/50996 [46:18<00:00, 18.35it/s, Success=50989, Exists=0, Error=7]  \n",
-      "\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51507bcc02b243a58a59c63ec6b83ae1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading PDB structures:   0%|          | 0/50996 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
@@ -115,9 +111,9 @@
       "RELATORIO FINAL DE DOWNLOAD\n",
       "============================================================\n",
       "Total de estruturas: 50996\n",
-      "Downloads bem-sucedidos: 50989\n",
-      "Ja existentes (nao baixados): 0\n",
-      "Falhas: 7\n",
+      "Downloads bem-sucedidos: 2\n",
+      "Ja existentes (nao baixados): 50989\n",
+      "Falhas: 5\n",
       "Taxa de sucesso: 100.0%\n",
       "\n",
       "Estruturas salvas em: /Volumes/promethion/cath-mainly-alpha/structures\n",
@@ -948,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -966,61 +962,23 @@
       "ANÁLISE DE FREQUÊNCIA DE AMINOÁCIDOS\n",
       "============================================================\n",
       "\n",
-      "Analisando 101,978 estruturas...\n",
-      "\n",
-      "Analisando 101,978 estruturas...\n",
+      "Analisando 50,989 estruturas...\n",
       "\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Analyzing: 100%|██████████| 101978/101978 [20:03<00:00, 84.76it/s]\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Frequências globais: /Volumes/promethion/cath-mainly-alpha/analysis/amino_acid_frequencies_global.txt\n",
-      "Frequências por estrutura: /Volumes/promethion/cath-mainly-alpha/analysis/amino_acid_frequencies_per_structure.csv\n",
-      "\n",
-      "============================================================\n",
-      "RESUMO DA ANÁLISE DE FREQUÊNCIA\n",
-      "============================================================\n",
-      "\n",
-      "Total de estruturas analisadas: 50,989\n",
-      "Total de resíduos: 15,567,550\n",
-      "\n",
-      "Top 5 aminoácidos mais frequentes:\n",
-      "  LEU: 1,610,406 (10.34%)\n",
-      "  ALA: 1,205,149 (7.74%)\n",
-      "  GLU: 1,067,741 (6.86%)\n",
-      "  VAL: 1,038,368 (6.67%)\n",
-      "  GLY: 985,092 (6.33%)\n",
-      "============================================================\n",
-      "\n",
-      "Frequências por estrutura: /Volumes/promethion/cath-mainly-alpha/analysis/amino_acid_frequencies_per_structure.csv\n",
-      "\n",
-      "============================================================\n",
-      "RESUMO DA ANÁLISE DE FREQUÊNCIA\n",
-      "============================================================\n",
-      "\n",
-      "Total de estruturas analisadas: 50,989\n",
-      "Total de resíduos: 15,567,550\n",
-      "\n",
-      "Top 5 aminoácidos mais frequentes:\n",
-      "  LEU: 1,610,406 (10.34%)\n",
-      "  ALA: 1,205,149 (7.74%)\n",
-      "  GLU: 1,067,741 (6.86%)\n",
-      "  VAL: 1,038,368 (6.67%)\n",
-      "  GLY: 985,092 (6.33%)\n",
-      "============================================================\n",
-      "\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4471029fca64b0d8d11d433bb9156b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyzing:   0%|          | 0/50989 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1825,14 +1783,6 @@
     "id": "Zt9VcnuRNa2K"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/promethion/cath-mainly-alpha/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "ename": "ModuleNotFoundError",
      "evalue": "No module named 'scipy'",
